Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-6659

gdiplus: GdipCreateFontFamilyFromName function fails

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.0
    • Wine
    • Sprint 1, October (0.3.15 first half)

    Description

      winetest gdiplus graphics is crashing (SEGV) due to GdipCreateFontFamilyFromName failing, while the test still merrily tries to use the GpFontFamily as if it was OK.

      Attachments

        Issue Links

          Activity

            People

              ThFabba ThFabba
              tamlin Mike Nordell
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: