[GDIPLUS_WINETEST] - Re-enable test_string_functions CORE-6659 ROSTESTS-78 #resolve

svn path=/trunk/; revision=66344